--- a/toolbox/src/main/res/layout/drop_down_list_header.xml
+++ b/toolbox/src/main/res/layout/drop_down_list_header.xml
@@ -20,8 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/drop_down_list_header_default_text_layout"
-        android:contentDescription="@string/image_content"
-        android:src="@drawable/drop_down_list_arrow"
+        android:contentDescription="@string/image_content"/>
+        <!--android:src="@drawable/drop_down_list_arrow"-->
         android:visibility="gone" />
 
     <RelativeLayout
